Localization in java code using properties file done

--- a/src/main/resources/messages_en_US.properties
+++ b/src/main/resources/messages_en_US.properties
@@ -32,3 +32,25 @@ login.welcome = To use full functionality of this website, better than login.
 #
 signup.title = Sign up page.
 signup.welcome = Fill full in this fields below.
+
+
+#
+#   User page
+#
+user.signup.success = Sign up successfully. Sign in to use fully functional.
+user.save.success = Saved user successful!
+user.delete.success = Deleted user successful!
+
+
+#
+#   Contact page
+#
+contact.save.success= Saved contact successful.
+contact.delete.success = Deleted contact successful.
+
+
+#
+#   Bookmark page
+#
+bookmark.save.success = Saved bookmark successful.
+bookmark.delete.success = Deleted bookmark successful.
