--- a/src/main/resources/messages_vi.properties
+++ b/src/main/resources/messages_vi.properties
@@ -35,3 +35,24 @@ login.welcome = Đăng nhập để sử dụng đầy đủ các chức năng c
 signup.title = Trang đăng ký.
 signup.welcome = Đăng nhập để sử dụng đầy đủ các chức năng của trang web. 
 
+
+#
+#   User page
+#
+user.signup.success = Đăng ký thành công, đăng nhập để sử dụng đầy đủ chức năng. 
+user.save.success = Lưu người dùng thành công. 
+user.delete.success = Xóa người dùng thành công. 
+
+
+#
+#   Contact page
+#
+contact.save.success= Lưu địa chỉ liên hệ thành công. 
+contact.delete.success = Xóa địa chỉ liên hệ thành công. 
+
+
+#
+#   Bookmark page
+#
+bookmark.save.success = Lưu bookmark thành công. 
+bookmark.delete.success = Xóa bookmark thành công. 
